recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value lengths
		lengths = length/3;
                ^Koch:20: error: not found: value lengths
		avance(lengths);
                       ^Koch:22: error: not found: value lengths
		snowSide(levels-1, lengths);
                                   ^Koch:25: error: not found: value lengths
		snowSide(levels-1, lengths);
                                   ^Koch:28: error: not found: value lengths
		avance(lengths);
                       ^